2008-03-24  ookoi  <ookoi@sundae>

	* Simulate IN_CREATE events on mkdir -p /d1/d2/[...]. 
	  Contributed by Thomas Kiley (tkiley@cs.uml.edu).

	* Notifier.loop() accepts a read_freq parameter.

	* Can detach and daemonize Notifier instances.

	* Delegates initialization to my_init(*kargs) when a subclass
	  of ProcessEvent is instanciated.

	* Provides processing class and new option -s for displaying 
	  statistics about received events.

	* Implements simplified watch of transient files.

	* select.Poll timeout's value changed to None when called from 
	  Notifier and set to 10s when called from ThreadedNotifier.

	* Removed useless locking stuff from Watch.

	* Removed all trailing whitespaces.

	* Notifier provides a loop() method.

	* ProcessEvent instances can be chained.

	* Events names are directly accessible at pyinotify's scope.

	* Optionnaly load psyco.

	* New attribute 'pathname' in Event class.

	* print statements removed. Use logging module for debug messages
	  and errors.

	* Implemented better representation __repr__ for classes Event and 
	  Watch.

	* Merged all .py files into pyinotify.py

	* Namespace limited to pyinotify.

	* Use ctypes instead of C code.

2007-07-10  ookoi  <ookoi@sundae>

	* License of pyinotify 0.7.1 updated: GPLv2 or later. pyinotify-dev 
	  still remains GPLv2 only.

	* version 0.7.1 released.

2007-06-26  ookoi  <ookoi@sundae>

	* src/pyinotify/pyinotify.py: reworking of EventsCodes (contributed
          by Darryl Dixon - darryl.dixon@winterhouseconsulting.com).

	* src/pyinotify/pyinotify.py: new -e command line option (contributed
          by Darryl Dixon - darryl.dixon@winterhouseconsulting.com).

2007-06-17  ookoi  <ookoi@mars>

	* src/pyinotify/inotify_syscalls.h: support hppa and mc68000.
	  (submitted by Mikhail Gusarov - dottedmag@dottedmag.net).

2007-02-17  ookoi  <ookoi@mars>

	* version 0.7.0 released.

	* src/example/close.py: fix import statement.
